kustomize/app-books/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-service
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: app-books
