kustomize/app-books/base/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app-books-destination-rule
spec:
  subsets:
    - name: stable
      labels:
        version: stable
    - name: canary
      labels:
        version: canary
